--- a/remix-ui/index.html
+++ b/remix-ui/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SLUMBR – Website Skeleton</title>
+  <title>REMix – Website Skeleton</title>
   <style>
     :root { --bg:#0b1020; --card:#121a33; --text:#e8ecff; --muted:#aab3d6; --accent:#7c5cff; --border:#23305a; }
     * { box-sizing: border-box; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial; }
@@ -77,7 +77,7 @@
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
         <div>
-          <h1>SLUMBR • Onboarding Skeleton</h1>
+          <h1>REMix • Onboarding Skeleton</h1>
           <div class="mini">Local auth + Google + Spotify (UI-only demo)</div>
         </div>
       </div>
@@ -90,7 +90,7 @@
         <!-- AUTH VIEW -->
         <div id="viewAuth">
           <h2>Sign in</h2>
-          <p>Create an account for SLUMBR, then connect your services. (Skeleton only: stored in localStorage.)</p>
+          <p>Create an account for REMix, then connect your services. (Skeleton only: stored in localStorage.)</p>
 
           <div class="tabs" role="tablist">
             <button class="tab active" id="tabLogin" type="button">Log in</button>
@@ -277,8 +277,8 @@
 <script>
   // --- Demo storage ---
   // users: { [username]: { passwordPlain (demo only), googleConnected, spotifyConnected, googleEmail, spotifyName, preferences } }
-  const LS_USERS = "slumbr_users_v1";
-  const LS_SESSION = "slumbr_session_v1";
+  const LS_USERS = "remix_users_v1";
+  const LS_SESSION = "remix_session_v1";
 
   const el = (id) => document.getElementById(id);
 
