--- a/remix-ui/index.html
+++ b/remix-ui/index.html
@@ -1,3 +1,14 @@
+<!--
+  Name: index.html
+  Description: Main HTML entry point for the Remix website.
+               This file serves as the root document that initializes and 
+               renders the user interface for the Remix website.
+  
+  Authors: Ella Nguyen, Lauren D'Souza
+  
+  Created: February 12, 2026
+  Updated: February 15, 2026
+-->
 <!doctype html>
 <html lang="en">
 <head>
